import React from 'react';
import MainView from "../common/components/MainView";

describe('MainView', () => {

    test(' Should render MainView Component', () => {
    });
});

